# ChangeLog for net-misc/connman
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/connman/ChangeLog,v 1.63 2013/06/04 10:15:22 chainsaw Exp $

*connman-1.15 (04 Jun 2013)
*connman-1.14 (04 Jun 2013)

  04 Jun 2013; Tony Vroon <chainsaw@gentoo.org> +connman-1.14.ebuild,
  +connman-1.15.ebuild:
  Version bumps. Primarily bugfixes, particularly around hidden SSID (WiFi)
  scanning and the command line client.

*connman-1.13 (30 Apr 2013)

  30 Apr 2013; Tony Vroon <chainsaw@gentoo.org> +connman-1.13.ebuild:
  Version bump to 1.13; as requested by Andrew Brouwers in bug #468000.

*connman-1.11 (14 Mar 2013)

  14 Mar 2013; Tony Vroon <chainsaw@gentoo.org> -connman-1.4.ebuild,
  -connman-1.5.ebuild, -connman-1.6.ebuild, -connman-1.7.ebuild,
  -connman-1.8.ebuild, +connman-1.11.ebuild,
  +files/connman-1.11-ip6-incomplete-type.patch, +files/connman.initd2:
  Drop dependency on libnl as requested by Gustavo Sverzut Barbieri in bug
  #415773. Init script now includes "provide net" as requested by José Romildo
  Malaquias in bug #438142. Fix up incomplete ip6 type as described by Amadeusz
  Sławiński in bug #460550. Version bump as requested by Dennis "dlan" Lan in
  bug #458672. Dropped deprecated wimax support USE-flag.

*connman-1.9 (16 Nov 2012)
*connman-1.8 (16 Nov 2012)
*connman-1.7 (16 Nov 2012)
*connman-1.6 (16 Nov 2012)
*connman-1.5 (16 Nov 2012)

  16 Nov 2012; Tony Vroon <chainsaw@gentoo.org> -connman-1.1.ebuild,
  -connman-1.2.ebuild, -connman-1.3.ebuild, +connman-1.5.ebuild,
  +connman-1.6.ebuild, +connman-1.7.ebuild, +connman-1.8.ebuild,
  +connman-1.9.ebuild:
  Version bumps as requested by José Romildo Malaquias in bug #438108. Please
  note that cm has gone in 1.7, and has been replaced with connmanctl. No
  compatibility symlink, as the actual interface is completely different.
  Removed some older non-stable ebuilds.
