@@ -6,6 +6,7 @@ AUX connman-1.11-ip6-incomplete-type.patch 395 SHA256 0f026f3785343d3cba01a4dad1
 AUX connman.confd 728 SHA256 767a160c1b3392f0a12d3908a937548a2f604a9a121e744c309ee6f478420b02 SHA512 820511a1fa04ff2c07a26dd3c74c846e3a710e6d6b44c4adaa782f55c9818afd3b935ed30bf2dc287e54e924128c2c1d02b6c4c89b5b5b7d07a7f590d9963969 WHIRLPOOL 06098d2fcc27c1bf7dcf73167273cea5e83cc6a4bd5b4ce369974b7295fef6a8c268ea1f548b958c35a569c9c0634cb8ba1c1bc6386d02d02abb76ac396d385a
 AUX connman.initd 578 SHA256 10deff4d07f2a631ef7d797ed420a917c00312381ee69f60346e94cf9a3fa25a SHA512 58c637f7222ce57df35800659154a72b2e6a29f7385ad985373742d56d0fae6e901c214710d20209ab10a304c8f3a987f0fdfb2e23e7cce73fa5c786a015324a WHIRLPOOL b8884223f42faa45b80abc4196510bb3d839ce7c6529cfdad10d21d0c6cd1461e7de8f224a6648867e267fcbdca7e434c7f0cc2cc7fcfa9de035a8666104b69b
 AUX connman.initd2 596 SHA256 f0a561f124cac3791fba6ee7ef5bc3ea46bd7535edf9e864689b0d9cfa65d332 SHA512 7c77dd70b67ead94b8ea6b937e60950e774d9e77045da7af43922763dcca008f9e80f724ab2820e9507b929a44441f9afb76020e4be1e0fd8ebaa5bc04a379b0 WHIRLPOOL 64195fe9b3d7f1d9e7fb162739e7d9b32a6d6212f2a7c9a103a62b2952624ba23f4489bd76bdb967d6893d562395d3a8719559cf57ee29363d7d64f074152423
+AUX connman.service 198 SHA256 746a4cb3d4a7083b3165dd69285df4a3f85ec5fd4556d805428b1c13dcd8f0d2 SHA512 a769961922c40b5ed3e5a09d08262b20b84aa27fc278678063b348431ba2976de9f2ebcd9f9b0afa6241540d255ba4cdf7120b75184510d41444b7dd3209b825 WHIRLPOOL 6c91e3fe0045eec718328c5eed31d6109485c41c46ebadf392ecad3c41e97d19e5430b3eaead45844e2364cb3fa9aad2aa904b2b345657f0531c4fc51ea294aa
 DIST connman-1.0.tar.gz 743543 SHA256 62ed6aa093700e393456dfab98f098bc151fc10baccc577bbb7d927221e23e50 SHA512 0baf3d87e26b94e6969dbbf22a465e7dbdea57bd954305a21e2a40d7cac0a4d6aef09ef9a6ba82ba4e7587cf0ee6e8e3ed5f56a0000de9c48c391c3118e6e151 WHIRLPOOL 68bf676ffd73c68dba0bcf9f1ab7819426ea3d4396de32753145ed071c65375b6b2511b25221cf58aeb275e3b3ae7994571e22cd71ade42d818996d84a8172db
 DIST connman-1.11.tar.xz 567640 SHA256 c977d732c31acbd6bd815b697f02503c885db8e08d8ecd6e9596345c93206687 SHA512 37ddaf18ee21724fb7254c1259619f6ce8f130edd37559aa099bca05dea7c12eb63d9b23c85fed868e4712042d9cf229eadc7321f71b48fe2eff7037567ecc12 WHIRLPOOL c075ee9363dda7dc37e9fb6bc13d7214b1fea4191119dc73496fab044a12ec56285eb07b11fdae6b138c25a6c95d6923fa99f0f285aaa263b9e7aa2dea52a541
 DIST connman-1.13.tar.xz 589228 SHA256 8a62026303ad76472dc7ed844f5a0170581a29fda623b2e6b5be71929fbfc5c8 SHA512 1fda45b4a0371b76aa0d9ec0fe837d3b33782b69650cc495fefda6f968291bde1b734eecf2971cd4317c4094efeb035d5ece9597d65104c4e2cc69f590be4e28 WHIRLPOOL 7e3a68063c275f1664eb0b8bc0aac8f933ed0147827e90e05a9371149f59bbc7de115787fb72c2138f208a1566d9a90ab3c90e5caca6516bd2d6bf9db76f222b
@@ -16,14 +17,14 @@ EBUILD connman-1.0-r1.ebuild 1910 SHA256 b71a3004ebd92e6e5f8bf9e1baeb1096f59c71f
 EBUILD connman-1.11.ebuild 1898 SHA256 ed5c6b81e1119f35cf7e73e4932b3a2dad0a7da9a12887d3994ed8b201c048df SHA512 b2e422c17c7326ee9cc9005de583eeff0ad48f3ada931938e3f4ee9c16fe79bb9fbb0c0dad65915bfdcd2e0db353a9395c9a1b9f5aa0a97119fd25247ceb383e WHIRLPOOL 54bb1fa0cc5b10884868bc6536d64c565c2293baeb8dbc780565861f8a7616ea1740ac351af5189c64d15eae3acf24f0d05d31155c9c78667fbe0505694cb995
 EBUILD connman-1.13.ebuild 1839 SHA256 a57e8cca3061b447e102dafcb519b6ea7c8bde5937bb13a5fef3bb81e31f8a52 SHA512 417fc8aff2ae6a6840c63685a4f0fc18621d0af6879477eeecba7e059db76815cad3f65e341fb093b7371f4b6cf6ca209bb390501b8dd7cc5febd349a5e1d8bf WHIRLPOOL 1c7ea5541938d2d2e24e1fd3bae9a3c1bf9e216246de89369ed90be938934b8f9b2a71c4d99bfa5d54573f25eaab8bbe7c5d1a285c8cb42211547dcb41e10bc9
 EBUILD connman-1.14.ebuild 1839 SHA256 3d7bcdb9f3d4e4b3126def296a238c340f1da83043a82d1ba72762671a68b3ae SHA512 eee414512b84d0dd646b38d12fdb9098586ea5fe4c8cad3d4a17f261230704b37f3762554df8493bbb9f40068d5bc7e230529339828092c748191a4c45189b88 WHIRLPOOL 967d85167b3b529762a3e4e18ced4e75917e8948aa49cdef0c77232139b4e6503d64681c1288f6eb487db09e40c6f9d1a05e32627c149c8cd833758f66234a72
-EBUILD connman-1.15.ebuild 1839 SHA256 a596264d28a0a971e56056cc6989a54ca9f5c2e6ccebfd574f6d4f17df90f5d1 SHA512 3097af9d61b73a4c33ccf2edb2b76b2d3a0896c8cc2ffad26435ddd2b0aa32fc2f80aaac2bd4d5c3b48eca213884b292c71e46a6713cbafbf4436871deef6f0d WHIRLPOOL d371cdfe2665d8d7111144769d9be5909470326f5b8a3a2046a68bb982864caf234c746796325328dbe3591ae7fb8231d49ab439d206ea8b6011891d73fc5835
+EBUILD connman-1.15.ebuild 1839 SHA256 a37bdd7861c102949c653102becd7d9af412b145d445a44d55eeb6b38ab7ab4a SHA512 9a23eef01c665e909f35066fec7436ba282c47ca3bf426bde2a6794f989cd4d693d59b9be221e32ac59ae66244dbecb9136264c854f1a30259968bd2dd8a8f27 WHIRLPOOL e78d2c5231636db1b554c9ba4b8ef5c473028d7af94182e414e559ca5e6767b5de1f862c87b30e19c47ff4222da99a01b1f5adc0b25b1868f7714e492407d1a7
 EBUILD connman-1.9.ebuild 1920 SHA256 093ec7e35626d1bc507f69ba4d8b2d356ab4ae3fb8987e6a15a5560020960051 SHA512 5f12b3f2807c97345c6d76821f3d51b80aa8cadc6b7142b0d8771702ad573f7bfb048006e2fc7bbc3bb01d21fb526b59e7c9e39fd009f9384fec0235e87382ff WHIRLPOOL ca483fa5fea419cc768c54438f57657a0aabcb3d70ec21bc153d5bdcd6427521ef626c7947a9b0ae0f11d5285fe65a0c77ddd3d9d0748759f42c058a8f2e1c03
-MISC ChangeLog 11921 SHA256 5d885b6aa0c6df8f0db0bcac2e4d96955f8520fe60f1d58013428b4114bb6c84 SHA512 8be668bb76b714bb1bb5c0278238098bbfaeb9d83cf31cd80ff37a77dd43425c29b690d7e5e144ccc920c1f97a1da93fc1f1416f636d15390779307ff75bcdb9 WHIRLPOOL 1a95b0896711c6adceff3a82bb50cbe6dd39759d8aa28fed9a433f80b9180af00a512b7673fd56b9b331c5b3ea25bf7c68c0353530cf7df95ceeb85b86a2e7b8
+MISC ChangeLog 12072 SHA256 763d9405895abffd51cfb1ecd7a9f8052726e6c0288de37b174ccecc199b1197 SHA512 1d0f24693e3a425e36a51209a375630b878726239fe7e68882c9aede2314a8ff6a0386f8d1b33ef02ed225938f52ee460c5ef26985a98ddfd8c7b349f534f7a1 WHIRLPOOL b7efde36425fd3fa30fb1b8b604b3b56443398c60980a596f1f6db07ad17a1b3dd0c4c3f7ca4a851ee5ba7ef10a5ddda49584888753f291b332bdc5ed3a2ba97
 MISC metadata.xml 718 SHA256 b32b96a3697f0993c06d1dde70f88365042453ab3499201933f01db7b094fa38 SHA512 e81544a48765ebf42557b15ed79b189cbfee4b23018bac6fc1e0bf39f29ed13d9bc460edacd76d4ef8b8239e772bb9b70ba59f429da8eb1aebe3269f7930ce28 WHIRLPOOL 64a2cbf9e9b67ab2bf0cc79f8cc6e8aed2137240685dc5abf0eee045a817ef8494bbcbee6d27932533f718a037f802970e71a8f5ccf1400e0572f9e7ba8b733e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlGtvj4ACgkQp5vW4rUFj5rVAQCgjB3mmeLIzMpkV0FyLqZvTsB9
-9iQAnR5wQpc3gYcInG/kP+iSaRHKVHQR
-=cL+9
+iEYEAREIAAYFAlHXAw4ACgkQCaWpQKGI+9QAZgCfWbJxZmW6J9AwVPm0NZjkba0n
+6CUAn3yLMvps+fcUqKxal2IbiS+SaFg0
+=LvPR
 -----END PGP SIGNATURE-----
