@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/connman
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/connman/ChangeLog,v 1.63 2013/06/04 10:15:22 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/connman/ChangeLog,v 1.64 2013/07/05 17:31:57 pacho Exp $
+
+  05 Jul 2013; Pacho Ramos <pacho@gentoo.org> +files/connman.service,
+  connman-1.15.ebuild:
+  Add unit file (#475862, thanks to Tony Vroon for approval)
 
 *connman-1.15 (04 Jun 2013)
 *connman-1.14 (04 Jun 2013)
@@ -351,4 +355,3 @@
   13 Aug 2009; Robert Piasek <dagger@gentoo.org> +connman-0.38.ebuild,
   +files/connman.initd, +metadata.xml:
   Initial ebuild for connman
-
